fixed active cell visiblity

--- a/src/styles/grid.css
+++ b/src/styles/grid.css
@@ -15,6 +15,7 @@
     justify-content: center;
     background-color: #aaa;
     cursor: pointer;
+    box-sizing: border-box;
   }
 
   .cell.n1 { color: blue; }
@@ -32,7 +33,7 @@
   }
   
   .cell.selected {
-    border: 2px solid blue;
+    box-shadow: inset 0 0 0 2px blue;
   }
 
  
